# tox-pdm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini  tox_pdm.py
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_hooks.py  test_integration.py
tests/fixture-project/: demo.py  pyproject.toml
tox_pdm/: plugin.py  plugin3.py  plugin4.py  utils.py
