[project]
name = "tox-pdm"
version = {use_scm = true}
description = "A plugin for tox that utilizes PDM as the package manager and installer"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "tox>=3.8.0",
    "toml~=0.10",
]
requires-python = ">=3.6"
dynamic = ["classifiers", "version"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["tox", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/pdm-project/tox-pdm"
Repository = "https://github.com/pdm-project/tox-pdm"

[project.entry-points.tox]
pdm = "tox_pdm.plugin"


[project.optional-dependencies]
test = [
    "pytest~=6.2",
    "coverage~=5.5",
]
lint = [
    "flake8~=3.8",
    "black~=20.8b1",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
