[project]
name = "tox-pdm"
description = "A plugin for tox that utilizes PDM as the package manager and installer"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "tox>=4.0",
    "tomli; python_version<'3.11'",
]
requires-python = ">=3.7"
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["tox", "testing", "pdm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/pdm-project/tox-pdm"
Repository = "https://github.com/pdm-project/tox-pdm"

[project.entry-points.tox]
pdm = "tox_pdm.plugin"

[project.optional-dependencies]
test = [
    "pytest>=6.2",
    "coverage[toml]>=5.5,<6.4",
]
lint = [
    "flake8>=3.8",
    "black>=20.8b1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test = "pytest -v tests/"

[tool.pdm.scripts.lint]
shell = """
    flake8 tox_pdm
    isort --check tox_pdm tests
    black --check tox_pdm tests
"""

[tool.pdm.scripts.format]
shell = """
    isort tox_pdm tests
    black tox_pdm tests
"""

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
