[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "requests~=2.25",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[project.optional-dependencies]
lint = [
    "flake8>=4",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
lint = "flake8 demo.py"
lint-shell = {shell = "flake8 demo.py"}
